Flushed out skills Added code for view counter (in progress) Fixed dark mode to cover whole sceen (not just content area) Changed updated date to show current date Edited dark mode button text to change between "Dark Mode" and "Light Mode"

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
- :root {
+:root {
    --bg: #0f1724;
    /* dark bg */
    --card: #0b1220;
@@ -23,9 +23,9 @@
    color: #0b1220
  }
 
- .dark {
-   background: linear-gradient(180deg, #020617 0%, #071024 100%);
-   color: #e6eef8
+ body.dark, html.dark {
+  background: linear-gradient(180deg, #020617 0%, #071024 100%) !important;
+  color: #e6eef8 !important;
  }
 
  .container {
